--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,3 +1,3 @@
 <h1> Landing Page </h1>
-<p> Welcome to YelpCamp </p>
-<a href="campgrounds"> View all campgrounds </a>
+<p> Welcome to Floatway Training </p>
+<a href="trainings"> View all training </a>
