--- a/views/trainings/index.ejs
+++ b/views/trainings/index.ejs
@@ -4,27 +4,27 @@
 <div class="container">
 	<div class="container">
 		<div class="jumbotron">
-		  <h1 class="display-4">Welcome to Raptek Warehouse System!</h1>
-		  <p class="lead">Our hand picked locations.</p>
+		  <h1 class="display-4">Welcome to Floatway Training System!</h1>
+		  <p class="lead">Our hand picked trainings.</p>
 		  <hr class="my-4">
 		  <div class="container">
-			  <p>Add yours to our site !.</p>
-			  <a class="btn btn-primary btn-lg" href="campgrounds/new" role="button">Add New DOP Warehouse</a>
+			  <p>Add training to our site !.</p>
+			  <a class="btn btn-primary btn-lg" href="trainings/new" role="button">Add New Training</a>
 		  </div>	  
 		</div>
 	</div>
 
 	<div class="container">
 		<div class="row text-center"  style="display: flex; flex-wrap: wrap;">
-			<% listcamp.forEach(function(element){ %>
+			<% listTraining.forEach(function(element){ %>
 				<div class="col-md-3 col-sm-6">
 					<div class ="thumbnail">
 						<img src="<%= element.image %>" > 
 						<div class="caption">
 								<h4><%= element.name %></h4>
 						</div>
-						<a href="/campgrounds/<%= element._id %>" class="btn btn-info"> More Info </a>
-						<a href="/campgrounds/<%= element._id %>/comments/new" class="btn btn-info"> Comment </a>
+						<a href="/trainings/<%= element._id %>" class="btn btn-info"> More Info </a>
+						<a href="/trainings/<%= element._id %>/comments/new" class="btn btn-info"> Comment </a>
 
 					</div>	
 				</div>
