--- a/views/trainings/show.ejs
+++ b/views/trainings/show.ejs
@@ -2,7 +2,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-3">
-			<p class="lead"> Raptek Warehouse </p>
+			<p class="lead"> Floatway Training </p>
 			<div class="list-group">
 				<li class="list-group-item active">Info 1</li>
 				<li class="list-group-item">Info 2</li>
@@ -12,29 +12,33 @@
 
 		<div class="col-md-9">
 			<div class="thumbnail">
-				<img class="img-responsive" src="<%= showCamp.image %>"
+				<img class="img-responsive" src="<%= showTraining.image %>"/>
 				<div class="caption-full">
 					<h4 class="pull-right"> PIC : Bedjo </h4>
-					<h4><a><%= showCamp.name %></a></h4>
-					<p> <%= showCamp.description %></p>
-				</div> 
+					<h4><a><%= showTraining.name %></a></h4>
+					<p> <%= showTraining.description %></p>
+				</div>
 			</div>
+
+
 			<div class="well">
 				<div class="text-right">
-					<a href="/campgrounds/<%= showCamp._id %>/comments/new" class="btn btn-success"> Comment </a>
+					<a href="/trainings/<%= showTraining._id %>/comments/new" class="btn btn-success"> Comment </a>
 				</div>
-				<% showCamp.comments.forEach(function(element){ %>
+				<hr>
+				<% showTraining.comments.forEach(function(element){ %>
 					<div class="row"> 
 						<div class="col-md-12">
-							<%= element.author %>
+							<strong> <%= element.author %> </strong>
 							<span class="pull-right"> 10 days ago </span>
-							<p> 
+							<p>
 								<%= element.text %>
 							</p>
 						</div>
 					</div>
 				<% }) %>
 			</div>
+
 		</div>
 	</div>
 </div>
