--- a/views/trainings/show.ejs
+++ b/views/trainings/show.ejs
@@ -29,7 +29,7 @@
 				<% showTraining.comments.forEach(function(element){ %>
 					<div class="row"> 
 						<div class="col-md-12">
-							<strong> <%= element.author %> </strong>
+							<strong> <%= element.author.username %> </strong>
 							<span class="pull-right"> 10 days ago </span>
 							<p>
 								<%= element.text %>
