--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title> Raptek Warehouse
+		<title> Floatway System Training
 		</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="/stylesheets/main.css">
@@ -13,9 +13,14 @@
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/">Login</a></li>
-					<li><a href="/">Sign Up</a></li>
-					<li><a href="/">Sign Out</a></li>
+					<% if (!currentUser) { %>
+						<li><a href="/login">Login</a></li>
+						<li><a href="/register">Sign Up</a></li>
+					<% } else { %>
+						<li>Signed in as : <%= currentUser.username %></li>
+						<li><a href="/logout">Sign Out</a></li>
+					<% } %>
+
 				</ul>
 			</div>
 		</div>
