add date on comment and map on info

--- a/views/trainings/edit.ejs
+++ b/views/trainings/edit.ejs
@@ -8,10 +8,17 @@
 					<input class="form-control" type="text" name="training[name]" value="<%= training.name %>" >	
 				</div>
 				<div class="form-group">
+					<input class="form-control" type="number" name="training[price]" value="<%=training.price %>" min="0.01" step="0.01">	
+				</div>
+				<div class="form-group">
 					<input class="form-control" type="text" name="training[image]" value="<%=training.image %>">					
 				</div>
 				<div class="form-group">
 					<input class="form-control" type="text" name="training[description]" value="<%=training.description %>">					
+				</div>
+				<div class="form-group">
+					<label for="location">Location</label>
+					<input class="form-control" type="text" name="location" id="location" value="<%= training.location %>">
 				</div>
 				<div class="form-group">				
 					<button class="btn btn-lg btn-primary btn-block">Edit</button>
