--- a/views/trainings/new.ejs
+++ b/views/trainings/new.ejs
@@ -8,10 +8,17 @@
 					<input class="form-control" type="text" name="name" placeholder="training name">	
 				</div>
 				<div class="form-group">
+					<input class="form-control" type="number" name="price" placeholder="training price" min="0.01" step="0.01">	
+				</div>
+				<div class="form-group">
 					<input class="form-control" type="text" name="image" placeholder="training image">					
 				</div>
 				<div class="form-group">
 					<input class="form-control" type="text" name="description" placeholder="description of training">					
+				</div>
+				<div class="form-group">
+					<label for="location">Location</label>
+					<input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA">
 				</div>
 				<div class="form-group">				
 					<button class="btn btn-lg btn-primary btn-block">Submit</button>
