training created at

--- a/views/trainings/show.ejs
+++ b/views/trainings/show.ejs
@@ -19,7 +19,7 @@
 					<h4><a><%= showTraining.name %></a></h4>
 					<p> <%= showTraining.description %></p>
 					<p>
-						<em>Trainer : <%= showTraining.trainer.username %> </em> 
+						<em>Trainer : <%= showTraining.trainer.username %>, <%= moment(showTraining.createdAt).fromNow() %> </em> 
 					</p>
 					<% if(currentUser && showTraining.trainer.id.equals(currentUser._id)) { %>
 						<a class="btn btn-xs btn-warning" href="/trainings/<%= showTraining._id %>/edit">Edit</a> 
@@ -41,7 +41,7 @@
 				<% showTraining.comments.forEach(function(comment){ %>
 					<div class="row"> 
 						<div class="col-md-12">
-							<strong> <%= comment.author.username %>, , <%= moment(showTraining.createdAt).fromNow() %> </strong>
+							<strong> <%= comment.author.username %> </strong>
 							<span class="pull-right"> <%= moment(comment.createdAt).fromNow() %> </span>
 							<p>
 								<%= comment.text %>  
